--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
             
         </div>
     </div>
-    
+    <img src="images/illustration-woman-online-mobile.svg" class="img-mob2"/>
 </body>
 </html>
